<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="#fff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btn_cut"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:padding="1dp"
                    android:src="@drawable/ic_cut" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/ve_cut"
                    android:textColor="@color/colorText"
                    android:textSize="11sp" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/btn_stroke_screen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_stroke_screen_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:padding="2dp"
                    android:src="@drawable/ic_stroke_light_rect" />

                <TextView
                    android:id="@+id/tv_stroke_screen_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/ve_stroke_screen"
                    android:textColor="@color/colorAccent"
                    android:textSize="11sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_full_screen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_full_screen_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:padding="2dp"
                    android:src="@drawable/ic_full_dark_rect" />

                <TextView
                    android:id="@+id/tv_full_screen_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/ve_full_screen"
                    android:textColor="@color/colorText"
                    android:textSize="11sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_blur_screen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_blur_screen_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:padding="2dp"
                    android:src="@drawable/ic_blur_dark_rect" />

                <TextView
                    android:id="@+id/tv_blur_screen_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/ve_blur_screen"
                    android:textColor="@color/colorText"
                    android:textSize="11sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_pad_screen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_pad_screen_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:padding="2dp"
                    android:src="@drawable/ic_pad_dark_rect" />

                <TextView
                    android:id="@+id/tv_pad_screen_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/ve_pad_screen"
                    android:textColor="@color/colorText"
                    android:textSize="11sp" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:padding="2dp"
                    android:src="@drawable/ic_delete_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/ve_delete"
                    android:textColor="@color/colorText"
                    android:textSize="11sp" />

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:focusable="true">

            <com.videoeditor.downloader.intubeshot.frame.sequence.FrameSequenceRecyclerView
                android:id="@+id/fs_rv_frame"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal" />

        </FrameLayout>

    </LinearLayout>

    <com.videoeditor.downloader.intubeshot.frame.edit.EditFrameView
        android:id="@+id/v_edit_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone" />

</FrameLayout>